vlib/v/checker/tests/match_cast_cond_not_same_range_cast_type_err.out
vlib/v/checker/tests/match_cast_cond_not_same_range_cast_type_err.vv:7:2: error: the range type and the match condition type should match
    5 | c := u8(3)
    6 | match c {
    7 |     a...b { println('1...5') }
      |     ~~~~~
    8 |     else { println('not 1...5') }
    9 | }
Details: 
match condition type: u8
          range type: u16
