vlib/v/checker/tests/match_cast_cond_not_same_range_cast_type_err.vv
const (
	a = u16(1)
	b = u16(5)
)
c := u8(3)
match c {
	a...b { println('1...5') }
	else { println('not 1...5') }
}
